--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,7 +37,7 @@
 
 <div class="sub_hero_container">
 	<div class="sub_hero_titile">
-		<h1 class="logo_color">Messes in Kolkata</h1>
+		<h1 class="logo_color">Latest messes in Kolkata</h1>
 	</div>
 </div>
 
@@ -62,3 +62,6 @@
 		<a href="/signup" class="btn big-btn">Get started <i class="fa-solid fa-angle-right"></i></a>
 	</div>
 </div>
+
+
+
