--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -14,7 +14,7 @@
 		<span><%= link_to 'Signup',signup_path  %></span> 
 		<span><%= link_to 'Signin',signin_path  %></span> 
 		<span><%= link_to 'About',about_path  %></span> 
-		<span><%= link_to 'Contact us',root_path  %></span> 
+		<span><%= link_to 'Contact us',contact_path  %></span> 
 		</div>
 
 	</div>
