--- a/app/views/messes/show.html.erb
+++ b/app/views/messes/show.html.erb
@@ -4,7 +4,7 @@
     <div class="mess_image">
       <% i=1 %>
       <% @mess.images.each do |img| %>
-        <%= image_tag img ,class:"msimg img#{i}"%>
+        <%= image_tag img ,class:"msimg img#{i}",alt:'mess images'%>
         <% i+=1 %>
       <% end %>
     </div>
