added user edit and delete feature + admin privileges

--- a/app/assets/stylesheets/desktop.css
+++ b/app/assets/stylesheets/desktop.css
@@ -996,3 +996,14 @@ a{
 {
 	background: var(--blue-light);
 }
+
+.acnt_btn
+{
+	margin-left: 16px;
+}
+.admin_badge
+{
+	margin-bottom: 10px;
+	background: #0072ff;
+	color: #fff;
+}
