--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 
 <% if owner %>
   
-<%= form_for model_name,url:signup_owner_path do |f| %>
+<%= form_for model_name,url:myurl do |f| %>
   <%= f.label :name ,class:'form_label'%> 
   <%= f.text_field :name,placeholder:'Your name' ,class:'form_field'%> 
 
@@ -11,7 +11,7 @@
    <%= f.label :email,class:'form_label' %> 
   <%= f.email_field :email,placeholder:"Your email" ,required: true,class:'form_field'%> 
 
-  <%= f.label :password ,class:'form_label'%> 
+  <%= f.label :password ,class:'form_label'%><em>(minimum is 6 charectors) 
   <%= f.password_field :password,required: true ,class:'form_field'%> 
 
   <%= f.label :password_confirmation ,class:'form_label'%> 
@@ -40,7 +40,7 @@
   <%= f.label :pincode,class:'form_label' %> 
   <%= f.number_field :pincode,placeholder:"Your pincode",required: true,class:'form_field' %> 
 
-    <%= f.label :adh ,"Aadhaar No",class:'form_label'%> 
+    <%= f.label :adh ,"Aadhaar No",class:'form_label'%> <em>(Enter 12 digit adhaar number)</em>
     <%= f.number_field :adh,placeholder:"Your aadhaar",required: true ,class:'form_field'%> 
 
   <%= f.submit para ,class:'btn signup_btn'%>
@@ -57,7 +57,7 @@
   <%= f.text_field :username,placeholder:"Your username" ,required: true,class:'form_field'%> 
 
 
-  <%= f.label :password ,class:'form_label'%> 
+  <%= f.label :password ,class:'form_label'%> <em>(minimum is 6 charectors)</em>
   <%= f.password_field :password,required: true ,class:'form_field',placeholder:'Enter your password'%> 
 
   <%= f.label :password_confirmation ,class:'form_label'%> 
