--- a/app/views/messes/_mess.html.erb
+++ b/app/views/messes/_mess.html.erb
@@ -62,7 +62,7 @@
 			</div>
 				<%= link_to mess_path(m) do %>
 			<div class="btn card_btn">
-				Show
+				View
 			</div>
 			<% end %>
 			<!-- <button class="btn">Show</button> -->
