--- a/app/views/messes/show.html.erb
+++ b/app/views/messes/show.html.erb
@@ -46,11 +46,11 @@
         <%= form_for @rate,url:rating_path do |f| %>
             
             <%#= f.select :rating ,[1,2,3,4,5] %>
-            <%= f.radio_button :rating,1 %> <span class="radio_label">1</span>
-            <%= f.radio_button :rating,2 %> <span class="radio_label">2</span>
-            <%= f.radio_button :rating,3 %> <span class="radio_label">3</span>
-            <%= f.radio_button :rating,4 %> <span class="radio_label">4</span>
-            <%= f.radio_button :rating,5 %> <span class="radio_label">5</span> <br>
+            <%= f.radio_button :rating,1,required:true %> <span class="radio_label">1</span>
+            <%= f.radio_button :rating,2 ,required:true%> <span class="radio_label">2</span>
+            <%= f.radio_button :rating,3,required:true %> <span class="radio_label">3</span>
+            <%= f.radio_button :rating,4 ,required:true%> <span class="radio_label">4</span>
+            <%= f.radio_button :rating,5 ,required:true%> <span class="radio_label">5</span> <br>
             <%= f.button 'Rate <i class="fa-solid fa-star"></i>'.html_safe,type: :submit,class:'btn rating_btn' %>
 
         <% end %>
@@ -151,4 +151,3 @@
 
 
 
-<%= @avg.to_i %>
