--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -1,24 +1,14 @@
 <div class="footer_continer">
-	<div class="footer">
-		<!-- <div class="first_col_footer">
-			<h2>Quick Links</h2>
-			<p><%= link_to 'Signup',signup_path  %></p> 
-			<p><%= link_to 'Signin', signin_path  %></p> 
-			<p><%= link_to 'Some where', root_path  %></p> 
-			<p><%= link_to 'Some where', root_path  %></p> 
-		</div> -->
-
-		<h3>Mess<span class="logo_color">Room</span> online mess finding site</h3>
-		<div class="links_footer">
-			
-		<span><%= link_to 'Signup',signup_path  %></span> 
-		<span><%= link_to 'Signin',signin_path  %></span> 
-		<span><%= link_to 'About',about_path  %></span> 
-		<span><%= link_to 'Contact us',contact_path  %></span> 
-		</div>
-
-	</div>
+  <div class="footer">
+    <h3>Mess<span class="logo_color">Room</span> online mess finding site</h3>
+    <div class="links_footer">
+      <span><%= link_to 'Signup',signup_path  %></span>
+      <span><%= link_to 'Signin',signin_path  %></span>
+      <span><%= link_to 'About',about_path  %></span>
+      <span><%= link_to 'Contact us',contact_path  %></span>
+    </div>
+  </div>
 </div>
-		<div class="low_footer">
-			<p>Developed by Sourav Das,Swarnali Saha,Rahul Pal</p>
-		</div>
+<div class="low_footer">
+  <p>Developed by Sourav Das,Swarnali Saha,Rahul Pal © 2022 - <b><a href="https://github.com/freakflames29/findmess" class="white_links" target="_blank"> <i class="fa-brands fa-github"></i> View on Github</a></b></p>
+</div>
