--- a/app/views/welcome/about.erb
+++ b/app/views/welcome/about.erb
@@ -15,8 +15,11 @@
 			<div class="person_info">
 				<h2>Sourav Das</h2>
 				<h3 class="subhead">Full stack</h3>
-				<p>B.Sc Computer Science hounours student.Roll:-9067.Sem 6</p>
-				<h5>Email: sourav292922@gmail.com</h5>
+				<p>B.Sc Computer Science hounours student</p>
+
+				<h5>Roll: 9067</h5>
+				<h5>Sem: 6</h5>
+				<h6>Email: sourav292922@gmail.com</h6>
 			</div>
 		</div>
 
@@ -28,8 +31,11 @@
 			<div class="person_info">
 				<h2>Swarnali Saha</h2>
 				<h3 class="subhead">Frontend</h3>
-				<p>B.Sc Computer Science hounours student.Roll:-9067.Sem 6</p>
-				<h5>Email: sourav292922@gmail.com</h5>
+				<p>B.Sc Computer Science hounours student</p>
+
+				<h5>Roll: 9067</h5>
+				<h5>Sem: 6</h5>
+				<h6>Email: sourav292922@gmail.com</h6>
 			</div>
 		</div>
 		<div class="person">
@@ -40,8 +46,11 @@
 			<div class="person_info">
 				<h2>Rahul Pal</h2>
 				<h3 class="subhead">Frontend</h3>
-				<p>B.Sc Computer Science hounours student.Roll:-9067.Sem 6</p>
-				<h5>Email: sourav292922@gmail.com</h5>
+				<p>B.Sc Computer Science hounours student</p>
+
+				<h5>Roll: 9067</h5>
+				<h5>Sem: 6</h5>
+				<h6>Email: sourav292922@gmail.com</h6>
 			</div>
 		</div>
 		
