--- a/app/views/welcome/about.erb
+++ b/app/views/welcome/about.erb
@@ -33,9 +33,9 @@
 				<h3 class="subhead">Frontend</h3>
 				<p>B.Sc Computer Science hounours student</p>
 
-				<h5>Roll: 9067</h5>
+				<h5>Roll: 9087</h5>
 				<h5>Sem: 6</h5>
-				<h6>Email: sourav292922@gmail.com</h6>
+				<h6>Email: saha2000swarnali@gmail.com</h6>
 			</div>
 		</div>
 		<div class="person">
