--- a/app/views/welcome/about.erb
+++ b/app/views/welcome/about.erb
@@ -1,12 +1,6 @@
 <div class="header">
 	<h1 class="logo_color">Creators of MessRoom</h1>
 </div>
-<% if Rails.env.production? %>
-	<h1>IT IS PRODUCTION</h1>
-	<% elsif Rails.env.development? %>
-	<h2>IT IS DEVELOPMENTs</h2>
-<% end %>
-
 
 
 <div class="mess_show_container about_infos">
@@ -52,9 +46,9 @@
 				<h3 class="subhead">Frontend</h3>
 				<p>B.Sc Computer Science hounours student</p>
 
-				<h5>Roll: 9067</h5>
+				<h5>Roll: 9072</h5>
 				<h5>Sem: 6</h5>
-				<h6>Email: sourav292922@gmail.com</h6>
+				<h6>Email: rpal3891@gmail.com</h6>
 			</div>
 		</div>
 		
