--- a/app/views/random/find.html.erb
+++ b/app/views/random/find.html.erb
@@ -1,2 +1,1 @@
-<h1>Random#find</h1>
-<p>Find me in app/views/random/find.html.erb</p>
+<iframe width="100%" height="500px" style="box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); border-radius:15px;" allowtransparency="true" allowfullscreen="true" scrolling="no" title="Embedded DrawSQL IFrame" frameborder="0" src="https://drawsql.app/aladdiin/diagrams/sourav-das/embed"></iframe>
