--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
-<div class="hero_container">
-	<div class="hero_text">
+
+
+<div class="hero_container" id="searchbar">
+	<div class="hero_text" id="herotext">
 		<h1 class="logo_color">
 		Want to search mess ?
 			
