--- a/app/views/layouts/partials/_hero.erb
+++ b/app/views/layouts/partials/_hero.erb
@@ -1,8 +1,8 @@
 <div class="top_hero_container">
 		<div class="text">
-		<h1>MessRoom One stop solution for mess finding.</h1>
+		<h1 class="anitext theh1ani">MessRoom One stop solution for mess finding.</h1>
 		<a href="#searchbar" class="btn hero_btn scroll_down">
-			<i class="fa-solid fa-angles-down"></i>
+			<i class="fa-solid fa-angles-down anitext"></i>
 		</a>
 			
 		</div>
