--- a/app/assets/stylesheets/hero.css
+++ b/app/assets/stylesheets/hero.css
@@ -22,50 +22,59 @@
 	flex-direction: column;
 
 }
-.text h1
+.theh1ani
 {
 	font-size: 9.4em;
-	font-family: 'Bebas Neue', cursive;
+	font-family: 'Bebas Neue', 'arial';
 	text-align: center;
 	line-height: 130px;
+
+}
+.anitext
+{
 
 	 background-image: linear-gradient(
     -225deg,
     yellow 0%,
-    blue 67%,
-    red	 29%,
+    #833ab4 27%,
+    #fd1d1d	 50%,
     /*#f80759 100%*/
-    #000 100%
+    /*#28ffa6 10%*/
+    /*#ffe52800 10%*/
+    #fcb045 20%
+    /*blue 20%*/
+    /*yellow 10%*/
   );
+	 /*background-image: url('https://i.pinimg.com/originals/f0/0e/81/f00e819060ffa47ab4cdc41a45b14c87.jpg');*/
+	 /*background-size: contain;*/
 	-webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
   transition: 0.25s ease;
     animation: textclip 5s ease ;
     background-size: 300% auto;
-		   /*transform: scale3d(15, 15, 10);*/
 		   animation-fill-mode: forwards;
+
+		 /*transform: translateY(1px);*/
 
 
 
 
 }
+.scalethreed
+{
+		   transform: scale3d(15, 15, 10);
+		   z-index: 10000000;
+
+}
 
 @keyframes textclip{
 	to{
-		/* background-image: linear-gradient(
-		    -225deg,
-		    #EA384D 0%,
+		
+		   background-position: 90% center;
+		   /*transform: scale3d(15, 15, 10);*/
 
-		    #D31027	 29%,
-		    #f80759 67%,
-
-		    #F9D423 100%
-		  );*/
-		   background-position: 101% center;
-
-		   /*transform: scale3d(1, 1, 1);*/
-		   /*animation-play-state: paused;*/
+		  
 	}
 
 }
